Move pyodide out of git lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -45,3 +45,54 @@ Jinja2.data filter=lfs diff=lfs merge=lfs -text
 nltk.data filter=lfs diff=lfs merge=lfs -text
 toolz.data filter=lfs diff=lfs merge=lfs -text
 attrs.data filter=lfs diff=lfs merge=lfs -text
+pandas.js filter=lfs diff=lfs merge=lfs -text
+pytz.js filter=lfs diff=lfs merge=lfs -text
+regex.js filter=lfs diff=lfs merge=lfs -text
+sympy.js filter=lfs diff=lfs merge=lfs -text
+cycler.js filter=lfs diff=lfs merge=lfs -text
+kiwisolver.js filter=lfs diff=lfs merge=lfs -text
+nltk.js filter=lfs diff=lfs merge=lfs -text
+pyparsing.js filter=lfs diff=lfs merge=lfs -text
+atomicwrites.js filter=lfs diff=lfs merge=lfs -text
+networkx.js filter=lfs diff=lfs merge=lfs -text
+py.js filter=lfs diff=lfs merge=lfs -text
+numpy.js filter=lfs diff=lfs merge=lfs -text
+patsy.js filter=lfs diff=lfs merge=lfs -text
+Pygments.js filter=lfs diff=lfs merge=lfs -text
+pyodide.asm.data.js filter=lfs diff=lfs merge=lfs -text
+pyodide_dev.js filter=lfs diff=lfs merge=lfs -text
+cytoolz.js filter=lfs diff=lfs merge=lfs -text
+docutils.js filter=lfs diff=lfs merge=lfs -text
+MarkupSafe.js filter=lfs diff=lfs merge=lfs -text
+webworker.js filter=lfs diff=lfs merge=lfs -text
+scipy.js filter=lfs diff=lfs merge=lfs -text
+statsmodels.js filter=lfs diff=lfs merge=lfs -text
+uncertainties.js filter=lfs diff=lfs merge=lfs -text
+biopython.js filter=lfs diff=lfs merge=lfs -text
+Brian2.js filter=lfs diff=lfs merge=lfs -text
+joblib.js filter=lfs diff=lfs merge=lfs -text
+scikit-learn.js filter=lfs diff=lfs merge=lfs -text
+toolz.js filter=lfs diff=lfs merge=lfs -text
+webencodings.js filter=lfs diff=lfs merge=lfs -text
+xlrd.js filter=lfs diff=lfs merge=lfs -text
+beautifulsoup4.js filter=lfs diff=lfs merge=lfs -text
+pyodide.asm.js filter=lfs diff=lfs merge=lfs -text
+pytest.js filter=lfs diff=lfs merge=lfs -text
+python-dateutil.js filter=lfs diff=lfs merge=lfs -text
+soupsieve.js filter=lfs diff=lfs merge=lfs -text
+test.js filter=lfs diff=lfs merge=lfs -text
+decorator.js filter=lfs diff=lfs merge=lfs -text
+micropip.js filter=lfs diff=lfs merge=lfs -text
+nose.js filter=lfs diff=lfs merge=lfs -text
+matplotlib.js filter=lfs diff=lfs merge=lfs -text
+more-itertools.js filter=lfs diff=lfs merge=lfs -text
+pluggy.js filter=lfs diff=lfs merge=lfs -text
+setuptools.js filter=lfs diff=lfs merge=lfs -text
+webworker_dev.js filter=lfs diff=lfs merge=lfs -text
+bleach.js filter=lfs diff=lfs merge=lfs -text
+html5lib.js filter=lfs diff=lfs merge=lfs -text
+Jinja2.js filter=lfs diff=lfs merge=lfs -text
+mpmath.js filter=lfs diff=lfs merge=lfs -text
+attrs.js filter=lfs diff=lfs merge=lfs -text
+distlib.js filter=lfs diff=lfs merge=lfs -text
+mne.js filter=lfs diff=lfs merge=lfs -text
